@@ -73,15 +73,7 @@
 
 #define MENU_SCROLL_STEP1 8
 #define MENU_SCROLL_STEP2 15
-#define MENU_SCROLL_ARROW_HEIGHT 20 /* This used to be: 23; This hard-coding should be
- 				     * changed. Add arrow_height style property into 
- 				     * commongtkrc and read it from there everywhere 
- 				     * where a reference to MENU_SCROLL_ARROW_HEIGHT
- 				     * is made.
-                                     * If these changes are made, please modify also
-  	                             * gtkcombobox.c.
-				     */
-#define MENU_SCROLL_FAST_ZONE MENU_SCROLL_ARROW_HEIGHT /* Was originally 8 */
+#define MENU_SCROLL_FAST_ZONE 8
 #define MENU_SCROLL_TIMEOUT1 50
 #define MENU_SCROLL_TIMEOUT2 20
 
@@ -2157,6 +2149,7 @@ gtk_menu_realize (GtkWidget *widget)
   GList *children;
   guint vertical_padding;
   guint horizontal_padding;
+  guint scroll_arrow_height;
   
   g_return_if_fail (GTK_IS_MENU (widget));
 
@@ -2187,6 +2180,7 @@ gtk_menu_realize (GtkWidget *widget)
   gtk_widget_style_get (GTK_WIDGET (menu),
 			"vertical-padding", &vertical_padding,
 			"horizontal-padding", &horizontal_padding,
+			"scroll-arrow-vlength", &scroll_arrow_height,
 			NULL);
   
   attributes.x = border_width + widget->style->xthickness + horizontal_padding;
@@ -2196,11 +2190,11 @@ gtk_menu_realize (GtkWidget *widget)
 
   if (menu->upper_arrow_visible)
     {
-      attributes.y += MENU_SCROLL_ARROW_HEIGHT;
-      attributes.height -= MENU_SCROLL_ARROW_HEIGHT;
+      attributes.y += scroll_arrow_height;
+      attributes.height -= scroll_arrow_height;
     }
   if (menu->lower_arrow_visible)
-    attributes.height -= MENU_SCROLL_ARROW_HEIGHT;
+    attributes.height -= scroll_arrow_height;
 
   attributes.window_type = GDK_WINDOW_CHILD;
 
@@ -2437,6 +2431,7 @@ gtk_menu_size_allocate (GtkWidget     *widget,
   gint width, height;
   guint horizontal_padding;
   guint vertical_padding;
+  guint scroll_arrow_height;
 
   g_return_if_fail (GTK_IS_MENU (widget));
   g_return_if_fail (allocation != NULL);
@@ -2451,6 +2446,7 @@ gtk_menu_size_allocate (GtkWidget     *widget,
   gtk_widget_style_get (GTK_WIDGET (menu),
 			"horizontal-padding", &horizontal_padding,
 			"vertical-padding", &vertical_padding,
+			"scroll-arrow-vlength", &scroll_arrow_height,
 			NULL);
   
   x = GTK_CONTAINER (menu)->border_width + widget->style->xthickness + horizontal_padding;
@@ -2467,12 +2463,12 @@ gtk_menu_size_allocate (GtkWidget     *widget,
   
   if (menu->upper_arrow_visible && !menu->tearoff_active)
     {
-      y += MENU_SCROLL_ARROW_HEIGHT;
-      height -= MENU_SCROLL_ARROW_HEIGHT;
+      y += scroll_arrow_height;
+      height -= scroll_arrow_height;
     }
   
   if (menu->lower_arrow_visible && !menu->tearoff_active)
-    height -= MENU_SCROLL_ARROW_HEIGHT;
+    height -= scroll_arrow_height;
   
   if (GTK_WIDGET_REALIZED (widget))
     {
@@ -2603,15 +2599,19 @@ gtk_menu_paint (GtkWidget      *widget,
       guint vertical_padding;
       guint horizontal_padding;
       GtkMenuPrivate *priv;
-      gint arrow_space = MENU_SCROLL_ARROW_HEIGHT - 2 * widget->style->ythickness;
-      gint arrow_size = 0.7 * arrow_space;
+      gint arrow_space;
+      gint arrow_size;
+      guint scroll_arrow_height;
 	
       priv = gtk_menu_get_private (menu);
 
       gtk_widget_style_get (GTK_WIDGET (menu),
 			    "vertical-padding", &vertical_padding,
 			    "horizontal-padding", &horizontal_padding,
+			    "scroll-arrow-vlength", &scroll_arrow_height,
 			    NULL);
+      arrow_space = scroll_arrow_height - 2 * widget->style->ythickness;
+      arrow_size = 0.7 * arrow_space;
   
       border_x = GTK_CONTAINER (widget)->border_width + widget->style->xthickness + horizontal_padding;
       border_y = GTK_CONTAINER (widget)->border_width + widget->style->ythickness + vertical_padding;
@@ -2647,7 +2647,7 @@ gtk_menu_paint (GtkWidget      *widget,
 			   GTK_ARROW_DOWN,
 			   TRUE,
 			   (width - arrow_size) / 2,
-			   height - border_y - MENU_SCROLL_ARROW_HEIGHT +
+			   height - border_y - scroll_arrow_height +
 			      widget->style->ythickness + (arrow_space - arrow_size)/2,
 			   arrow_size, arrow_size);
 	}
@@ -3112,6 +3112,7 @@ gtk_menu_scroll_by (GtkMenu *menu,
   gint offset;
   gint view_width, view_height;
   gboolean double_arrows;
+  guint scroll_arrow_height;
 
   widget = GTK_WIDGET (menu);
   offset = menu->scroll_offset + step;
@@ -3119,6 +3120,7 @@ gtk_menu_scroll_by (GtkMenu *menu,
   /* get double_arrows style property */
   gtk_widget_style_get (widget,
  			"double_arrows", &double_arrows,
+ 			"scroll-arrow-vlength", &scroll_arrow_height,
  			NULL);
 
   /* If we scroll upward and the non-visible top part
@@ -3127,7 +3129,7 @@ gtk_menu_scroll_by (GtkMenu *menu,
    * screen space than just scrolling to the top.
    */
   if (!double_arrows)
-    if ((step < 0) && (offset < MENU_SCROLL_ARROW_HEIGHT))
+    if ((step < 0) && (offset < scroll_arrow_height))
       offset = 0;
 
   /* Don't scroll over the top if we weren't before: */
@@ -3138,13 +3140,13 @@ gtk_menu_scroll_by (GtkMenu *menu,
 
   /* Don't scroll past the bottom if we weren't before: */
   if (menu->scroll_offset > 0)
-    view_height -= MENU_SCROLL_ARROW_HEIGHT;
+    view_height -= scroll_arrow_height;
   
   /* When both arrows are always shown, reduce
    * view height even more.
    */
   if (double_arrows)
-    view_height -= MENU_SCROLL_ARROW_HEIGHT;
+    view_height -= scroll_arrow_height;
 
   if ((menu->scroll_offset + view_height <= widget->requisition.height) &&
       (offset + view_height > widget->requisition.height))
@@ -3207,6 +3209,7 @@ gtk_menu_handle_scrolling (GtkMenu *menu,
   gint top_x, top_y;
   gint win_x, win_y;
   gboolean ret = FALSE;
+  guint scroll_arrow_height;
 
   priv = gtk_menu_get_private (menu);
 
@@ -3216,6 +3219,7 @@ gtk_menu_handle_scrolling (GtkMenu *menu,
 
   gtk_widget_style_get (GTK_WIDGET (menu),
 			"vertical-padding", &vertical_padding,
+			"scroll-arrow-vlength", &scroll_arrow_height,
 			NULL);
   
   border = GTK_CONTAINER (menu)->border_width +
@@ -3235,7 +3239,7 @@ gtk_menu_handle_scrolling (GtkMenu *menu,
       rect.x = win_x;
       rect.y = win_y;
       rect.width = width;
-      rect.height = MENU_SCROLL_ARROW_HEIGHT + border;
+      rect.height = scroll_arrow_height + border;
       
       menu->upper_arrow_prelight = FALSE;
       if ((x >= rect.x) && (x < rect.x + rect.width) &&
@@ -3287,9 +3291,9 @@ gtk_menu_handle_scrolling (GtkMenu *menu,
   if (menu->lower_arrow_visible && !menu->tearoff_active)
     {
       rect.x = win_x;
-      rect.y = win_y + height - border - MENU_SCROLL_ARROW_HEIGHT;
+      rect.y = win_y + height - border - scroll_arrow_height;
       rect.width = width;
-      rect.height = MENU_SCROLL_ARROW_HEIGHT + border;
+      rect.height = scroll_arrow_height + border;
 
       menu->lower_arrow_prelight = FALSE;
       if ((x >= rect.x) && (x < rect.x + rect.width) &&
@@ -3677,6 +3681,7 @@ gtk_menu_position (GtkMenu *menu)
   GdkScreen *screen;
   GdkScreen *pointer_screen;
   GdkRectangle monitor;
+  guint scroll_arrow_height;
 
   g_return_if_fail (GTK_IS_MENU (menu));
 
@@ -3685,6 +3690,10 @@ gtk_menu_position (GtkMenu *menu)
   screen = gtk_widget_get_screen (widget);
   gdk_display_get_pointer (gdk_screen_get_display (screen),
 			   &pointer_screen, &x, &y, NULL);
+
+  gtk_widget_style_get (GTK_WIDGET (menu),
+			"scroll-arrow-vlength", &scroll_arrow_height,
+ 			NULL);
 
   /* We need the requisition to figure out the right place to
    * popup the menu. In fact, we always need to ask here, since
@@ -3876,7 +3885,7 @@ gtk_menu_position (GtkMenu *menu)
     }
 
   if (scroll_offset > 0)
-    scroll_offset += MENU_SCROLL_ARROW_HEIGHT;
+    scroll_offset += scroll_arrow_height;
   
   gtk_window_move (GTK_WINDOW (GTK_MENU_SHELL (menu)->active ? menu->toplevel : menu->tearoff_window), 
 		   x, y);
@@ -3920,6 +3929,7 @@ gtk_menu_scroll_to (GtkMenu *menu,
   guint vertical_padding;
   guint horizontal_padding;
   gboolean double_arrows;
+  guint scroll_arrow_height;
 
   widget = GTK_WIDGET (menu);
 
@@ -3941,6 +3951,7 @@ gtk_menu_scroll_to (GtkMenu *menu,
  			"vertical-padding", &vertical_padding,
 			"horizontal-padding", &horizontal_padding,
 			"double_arrows", &double_arrows,
+			"scroll-arrow-vlength", &scroll_arrow_height,
  			NULL);
   
   border_width = GTK_CONTAINER (menu)->border_width;
@@ -3965,8 +3976,8 @@ gtk_menu_scroll_to (GtkMenu *menu,
     if (!menu->upper_arrow_visible || !menu->lower_arrow_visible)
       gtk_widget_queue_draw (GTK_WIDGET (menu));
     
-    view_height -= 2*MENU_SCROLL_ARROW_HEIGHT;
-    y += MENU_SCROLL_ARROW_HEIGHT;
+    view_height -= 2*scroll_arrow_height;
+    y += scroll_arrow_height;
 
     menu->upper_arrow_visible = menu->lower_arrow_visible = TRUE;    
     if (priv->upper_arrow_state == GTK_STATE_INSENSITIVE)
@@ -4030,7 +4041,7 @@ gtk_menu_scroll_to (GtkMenu *menu,
       menu->upper_arrow_visible = offset > 0;
       
       if (menu->upper_arrow_visible)
-	view_height -= MENU_SCROLL_ARROW_HEIGHT;
+	view_height -= scroll_arrow_height;
       
       if ( (last_visible != menu->upper_arrow_visible) &&
 	   !menu->upper_arrow_visible)
@@ -4047,7 +4058,7 @@ gtk_menu_scroll_to (GtkMenu *menu,
       menu->lower_arrow_visible = offset < menu_height - view_height;
       
       if (menu->lower_arrow_visible)
-	view_height -= MENU_SCROLL_ARROW_HEIGHT;
+	view_height -= scroll_arrow_height;
       
       if ( (last_visible != menu->lower_arrow_visible) &&
 	   !menu->lower_arrow_visible)
@@ -4061,7 +4072,7 @@ gtk_menu_scroll_to (GtkMenu *menu,
 	}
       
       if (menu->upper_arrow_visible)
-	y += MENU_SCROLL_ARROW_HEIGHT;
+	y += scroll_arrow_height;
     }
 
   /* Scroll the menu: */
@@ -4139,6 +4150,7 @@ gtk_menu_scroll_item_visible (GtkMenuShell    *menu_shell,
     {
       guint vertical_padding;
       gboolean double_arrows;
+      guint scroll_arrow_height;
       
       y = menu->scroll_offset;
       gdk_drawable_get_size (GTK_WIDGET (menu)->window, &width, &height);
@@ -4146,6 +4158,7 @@ gtk_menu_scroll_item_visible (GtkMenuShell    *menu_shell,
       gtk_widget_style_get (GTK_WIDGET (menu),
 			    "vertical-padding", &vertical_padding,
 			    "double_arrows", &double_arrows,
+			    "scroll-arrow-vlength", &scroll_arrow_height,
 			    NULL);
 			    
       height -= 2*GTK_CONTAINER (menu)->border_width + 2*GTK_WIDGET (menu)->style->ythickness + 2*vertical_padding;
@@ -4161,21 +4174,21 @@ gtk_menu_scroll_item_visible (GtkMenuShell    *menu_shell,
 	{
 	  arrow_height = 0;
 	  if (menu->upper_arrow_visible && !menu->tearoff_active)
-	    arrow_height += MENU_SCROLL_ARROW_HEIGHT;
+	    arrow_height += scroll_arrow_height;
 	  if (menu->lower_arrow_visible && !menu->tearoff_active)
-	    arrow_height += MENU_SCROLL_ARROW_HEIGHT;
+	    arrow_height += scroll_arrow_height;
 	  
 	  if (child_offset + child_height > y + height - arrow_height)
 	    {
 	      arrow_height = 0;
 	      if ((!last_child && !menu->tearoff_active) || (double_arrows))
-		arrow_height += MENU_SCROLL_ARROW_HEIGHT;
+		arrow_height += scroll_arrow_height;
 	      
 	      y = child_offset + child_height - height + arrow_height;
 	      if (((y > 0) && !menu->tearoff_active) || (double_arrows))
 		{
 		  /* Need upper arrow */
-		  arrow_height += MENU_SCROLL_ARROW_HEIGHT;
+		  arrow_height += scroll_arrow_height;
 		  y = child_offset + child_height - height + arrow_height;
 		}
 	      /* Ignore the enter event we might get if the pointer is on the menu
@@ -4536,15 +4549,19 @@ get_visible_size (GtkMenu *menu)
 {
   GtkWidget *widget = GTK_WIDGET (menu);
   GtkContainer *container = GTK_CONTAINER (menu);
-  
+  guint scroll_arrow_height;
   gint menu_height = (widget->allocation.height
 		      - 2 * (container->border_width
 			     + widget->style->ythickness));
+
+  gtk_widget_style_get (widget,
+			"scroll-arrow-vlength", &scroll_arrow_height,
+			NULL);
   
   if (menu->upper_arrow_visible && !menu->tearoff_active)
-    menu_height -= MENU_SCROLL_ARROW_HEIGHT;
+    menu_height -= scroll_arrow_height;
   if (menu->lower_arrow_visible && !menu->tearoff_active)
-    menu_height -= MENU_SCROLL_ARROW_HEIGHT;
+    menu_height -= scroll_arrow_height;
 
   return menu_height;
 }
@@ -4598,15 +4615,20 @@ get_menu_height (GtkMenu *menu)
 {
   gint height;
   GtkWidget *widget = GTK_WIDGET (menu);
+  guint scroll_arrow_height;
+
+  gtk_widget_style_get (widget,
+			"scroll-arrow-vlength", &scroll_arrow_height,
+			NULL);
 
   height = widget->requisition.height;
   height -= (GTK_CONTAINER (widget)->border_width + widget->style->ythickness) * 2;
 
   if (menu->upper_arrow_visible && !menu->tearoff_active)
-    height -= MENU_SCROLL_ARROW_HEIGHT;
+    height -= scroll_arrow_height;
 
   if (menu->lower_arrow_visible && !menu->tearoff_active)
-    height -= MENU_SCROLL_ARROW_HEIGHT;
+    height -= scroll_arrow_height;
 
   return height;
 }
@@ -4618,7 +4640,12 @@ gtk_menu_real_move_scroll (GtkMenu       *menu,
   gint page_size = get_visible_size (menu);
   gint end_position = get_menu_height (menu);
   GtkMenuShell *menu_shell = GTK_MENU_SHELL (menu);
-  
+  guint scroll_arrow_height;
+
+  gtk_widget_style_get (GTK_WIDGET (menu),
+			"scroll-arrow-vlength", &scroll_arrow_height,
+			NULL);
+
   switch (type)
     {
     case GTK_SCROLL_PAGE_UP:
@@ -4661,7 +4688,7 @@ gtk_menu_real_move_scroll (GtkMenu       *menu,
 	    if (menu->scroll_offset != old_offset)
 	      step = menu->scroll_offset - old_offset;
 
-	    step -= (new_upper_arrow_visible - old_upper_arrow_visible) * MENU_SCROLL_ARROW_HEIGHT;
+	    step -= (new_upper_arrow_visible - old_upper_arrow_visible) * scroll_arrow_height;
 
 	    new_child = child_at (menu, child_offset + step);
 	    if (new_child)
